--- a/src/Kooco.Pikachu.Blazor/Pages/ShopCarts/ShopCarts.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShopCarts/ShopCarts.razor
@@ -137,7 +137,7 @@
                     <DisplayTemplate>
                         <Div Class="d-flex align-items-center gap-1">
                             <Div Class="member-image">
-                                <img class="img-fluid rounded-circle" src="@MemberConsts.MaleAvatarUrl" alt="Alternate Text" />
+                                <img class="img-fluid rounded-circle" src="@MemberConsts.GetAvatarUrl(context.Gender)" alt="Alternate Text" />
                             </Div>
                             <Div>
                                 <Div>
@@ -200,4 +200,4 @@
         </DataGrid>
     </CardBody>
 </Card>
-<CartItemsModal @ref="CartItemsModal" AppService="ShopCartAppService" />
+<CartItemsModal @ref="CartItemsModal" AppService="ShopCartAppService" OnSubmit="GetShopCartsAsync" />
