--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -2182,7 +2182,7 @@
     </ModalContent>
 </Modal>
 @* Carousel Modal  *@
-<Modal @ref="CarouselCropperModal">
+@* <Modal @ref="CarouselCropperModal">
     <ModalContent Size="ModalSize.Large">
         <ModalHeader>
             <ModalTitle>@L["CarouselCropper"]</ModalTitle>
@@ -2211,7 +2211,7 @@
             <Button Color="Color.Primary"  Clicked="() => CropImageAsync(uploadedCarouselImages, CarouselModuleNumber, CarouselPicker, ImageType)">@L["Save"]</Button>
         </ModalFooter>
     </ModalContent>
-</Modal>
+</Modal> *@
 
 <ConfirmDialog />
 @code {
