--- a/src/Kooco.Pikachu.Blazor/Pages/ShopCarts/ShopCarts.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShopCarts/ShopCarts.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Members/Shop-Carts"
+@using Kooco.Pikachu.GroupBuys
 @using Kooco.Pikachu.Members
 @using Kooco.Pikachu.ShopCarts
 @using Kooco.Pikachu.TierManagement
@@ -6,6 +7,7 @@
 @inject NavigationManager NavigationManager
 @inject IVipTierSettingAppService VipTierSettingAppService
 @inject IShopCartAppService ShopCartAppService
+@inject IGroupBuyAppService GroupBuyAppService
 
 <Div>
     <Row>
@@ -45,6 +47,21 @@
         @if (FiltersVisible)
         {
             <Row Class="mt-2" VerticalGutter="10">
+                <Column ColumnSize="ColumnSize.Is3">
+                    <Label>@L["GroupBuy"]</Label>
+                    <AntDesign.Select @bind-Value="@Filters.GroupBuyId"
+                                      EnableSearch
+                                      AllowClear
+                                      TItem="Guid?"
+                                      TItemValue="Guid?">
+                        <SelectOptions>
+                            @foreach (var option in GroupBuyOptions)
+                            {
+                                <AntDesign.SelectOption TItemValue="Guid?" TItem="Guid?" Value=@option.Id Label=@option.Name />
+                            }
+                        </SelectOptions>
+                    </AntDesign.Select>
+                </Column>
                 <Column ColumnSize="ColumnSize.Is3">
                     <Label>@L["VipTier"]</Label>
                     <AntDesign.Select @bind-Value="@Filters.VipTier"
@@ -97,8 +114,8 @@
                                            Parser="AntHelper.ParseAmount">
                     </AntDesign.InputNumber>
                 </Column>
-                <Column ColumnSize="ColumnSize.Is12">
-                    <Div Class="d-flex justify-content-end gap-1 w-100">
+                <Column ColumnSize="ColumnSize.Is3">
+                    <Div Class="d-flex align-items-end gap-1 h-100 w-100">
                         <Button Class="btn-sm btn-outline-primary" Clicked="ResetFilters">
                             <Icon Name="IconName.Undo"></Icon>
                             @L["Reset"]
